<resources>
    <string name="app_name">Books4lending</string>
    <string name="lbl_serverdown">We are currently facing some issues with our server. Please try again later.</string>
    <string name="lbl_jsonerror">Unable to process due to server issues. Please try again.</string>
    <string name="error500">Something Went Wrong ,Please try again</string>
    <string name="yesterday">Yesterday</string>
    <string name="pleasecheckyourinternet">Please Check Your internet \n connection</string>
    <string name="no_internet">No Internet</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="forget">Forget Pin?</string>
    <string name="or">Or</string>
    <string name="donthaveanacctount">Don’t have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="createaccount">Create Account </string>
    <string name="fourdigitpin">Enter 4 Digit pin <font color='#FF0000'>*</font></string>
    <string name="confirm_pin">Confirm Pin <font color='#FF0000'>*</font></string>
    <string name="mobile">Mobile <font color='#FF0000'>*</font></string>
    <string name="mobilenostar">Mobile </string>
    <string name="email">Email ID</string>
    <string name="alreadyhaveanaccount">Already have an Account</string>
    <string name="signin">Sign In</string>
    <string name="enterusername">Enter User Name</string>
    <string name="enterpassword">Enter Password</string>
    <string name="select_your_subscription">Select your Subscription</string>
    <string name="subscriptionpla">Subscription Plan</string>
    <string name="subscriptionnow">Subscribe Now</string>
    <string name="bestvalue">Best Value</string>
    <string name="select_categories">Select Categories</string>
    <string name="myplan">My Plan</string>
    <string name="search_by_title_or_auhtor">Titles, Authors or Topics of Subcategories</string>
    <string name="selectauthor">Select Author</string>
    <string name="selectbook">Select Book</string>
    <string name="addtocart">Add to cart</string>
    <string name="name">Enter Name<font color='#FF0000'>*</font></string>
    <string name="memberid">Enter Member ID</string>
    <string name="changepin">Change Pin</string>
    <string name="oldpin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="memberidoremail">Member ID</string>
    <string name="submit">Submit</string>
    <string name="forgetpin">Forget Pin</string>
    <string name="markall">Mark all as Read</string>
    <string name="mycart">Book Cart</string>
    <string name="notification">Notification</string>
    <string name="delivered">Delivered</string>
    <string name="processing">Processing</string>
    <string name="cancelled">Cancelled</string>
    <string name="returned">Returned</string>
    <string name="trackingno">Tracking Number</string>
    <string name="quantity">Quantity</string>
    <string name="checkoout">Checkout</string>
    <string name="enterpin">Enter Your Four Digit Pin</string>
    <string name="profile">Edit Profile</string>
    <string name="save">Save </string>
    <string name="nameonly">Name</string>
    <string name="pin">Pin</string>
    <string name="id">Member ID: </string>
    <string name="onlinepayment">OnlinePayment</string>
    <string name="cashondelievry">Pay by cash</string>
    <string name="subscribetext">Welcome to LMS. Please contact librarian to get your registration approved.\n \n Contact number: 9444789224</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="cash">Cash</string>
    <string name="payment">Online Payment</string>
    <string name="selectsubcategories">Select SubCategories</string>
    <string name="selectlanguage">Select Language</string>
    <string name="searchbybook">Search by Books</string>
    <string name="errormsg">This service is not available now,Please select cash option</string>
    <string name="createnewpin">Create New Pin</string>
    <string name="noofbookordered">Book Ordered</string>
    <string name="noofissue">Book Issued</string>
    <string name="no_of_rejected">Book Rejected</string>
    <string name="no_of_processing">Book Processing</string>
    <string name="no_of_return">Book Returned</string>
    <string name="orderno">"Order Id : "</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel ?</string>
    <string name="returnbook">Return Book</string>
    <string name="Yourplan">Current Plan</string>
    <string name="planname">Plan Name</string>
    <string name="plan_price">Price</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="active_date">Plan Activated Date</string>
    <string name="expire_date">Expiry Date</string>
    <string name="status">Plan Status</string>
    <string name="continuesameplan">Continue Same Plan</string>
    <string name="chooseanotherplan">Choose Other Plan</string>
    <string name="enteraddress">Address</string>
    <string name="pincode">Pincode</string>
    <string name="orderdetails">Order Details</string>
    <string name="bookname">Book Name : </string>
    <string name="languagename">Language Name :  </string>
    <string name="authorname">Author Name : </string>
    <string name="bookholddays">Book Holdable Days : </string>
    <string name="paymentmode">Payment Mode</string>
    <string name="paymenalert">Choose your plan to become a Member.\nPress Proceed.</string>
    <string name="paymenalertnew">Choose your plan to become a Member. \nPress Choose Plan.</string>
    <string name="proceed">Proceed</string>
    <string name="chooseplan">Choose Plan</string>
    <string name="noaddress">Delivery Address Not Found.Please add Address by here</string>
    <string name="noaddressalret">Delivery Address Not Found.Please add Address.</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="confirm_pinwithoutstar">Confirm Pin</string>
    <string name="dateofbirth">Date of Birth (dd-mm-yyyy)</string>
    <string name="dobwithdd">DOB (dd-mm-yyyy)</string>
    <string name="selectgender">Select Gender</string>
    <string name="subcatecategories">Search By Category</string>
    <string name="subcateauthor">Search By Author</string>
    <string name="searchbytitle">Search By Title</string>
    <string name="letstart">Let\'s Go</string>
    <string name="newsubscribeinformation">1) Refundable Deposit of Rs.500/- will be collected at the time of taking membership!\n2) Book Holding Period - 15days\n3) Please visit our website www.books4lending.com for further details about the library.</string>
    <string name="dueexceedday">Due Exceeded Days:</string>
    <string name="startdate">Start Date</string>
    <string name="availableservice">Available Delivery Location(s)</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="home">Home</string>
    <string name="delivery_charge">Delivery Charge:</string>
    <string name="bookpervisit">Books Per Visit</string>
    <string name="enddate">End Date</string>
    <!--\n3) Please Visit our website www.books4lending.com to know about our library details-->
</resources>